data ingestion added

--- a/notebook/mongoDB_demo.ipynb
+++ b/notebook/mongoDB_demo.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
     "COLLECTION_NAME = \"Proj1-Data\"\n",
     "\n",
     "username = \"deckard2049cyber\"\n",
-    "password = \"69191@Agam\"  # '@' needs to be encoded\n",
+    "password = \"69191Agam\"  # '@' needs to be encoded\n",
     "\n",
     "# Encode the username and password\n",
     "encoded_username = urllib.parse.quote_plus(username)\n",
